fixup! fixup! fix(ui): alignment in header

--- a/apps/beeai-ui/src/components/AppHeader/AppHeader.module.scss
+++ b/apps/beeai-ui/src/components/AppHeader/AppHeader.module.scss
@@ -39,6 +39,6 @@
   line-height: math.div(20, 14);
 }
 
-.agentDetailButton {
+.agentDetailButtonContainer {
   text-align: end;
 }
